<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/chkAudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_Audio"/>

    <CheckBox
        android:id="@+id/chk3G"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_3G"/>

    <CheckBox
        android:id="@+id/chkBluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_Bluetooth" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:id="@+id/btnDisplay"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/btn_ok"
        android:textColor="@color/text_primary"/>

    <Button
        android:id="@+id/buttonCleanSlate"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/btn_cleanSlate"
        android:onClick="cleanSlate"
        android:textColor="@color/text_primary"/>

    <Button
        android:id="@+id/buttonChangeSettings"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/btn_changeSettings"
        android:onClick="changeSettings"
        android:textColor="@color/text_primary"/>

        </LinearLayout>

    <Button
        android:id="@+id/killServices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_killServices"
        android:onClick="killServices"
        android:textColor="@color/text_primary"
        android:layout_gravity="center"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"/>

</LinearLayout>
